app/assets/stylesheets/components/notes/note_detail.scss
.note-detail {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  width: 100%;
}

.detail-toolbar {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 95px;
  width: 100%;
}

.note-options {
  display: flex;
  align-items: flex-end;
  height: 35px;
  margin: 0 45px;

  border-bottom: 1px solid $index-border;
}

.detail-tag {
  display: flex;

  width: auto;
  height: 30px;
}

.detail-tag img {
  height: 15px;
  width: 15px;
  margin: 7px;
}

.detail-buttons {
  display: flex;

  margin: 15px;
}

.detail-button {
  width: 24px;
  height: 24px;
  margin-right: 15px;
  background-position: center;
  border-style: none;
}

.detail-button#trash {
  background: url(http://res.cloudinary.com/dkuqs8yz1/image/upload/v1495221055/trash.png);
  background-size: 24px 24px;
}

.detail-button#trash:hover {
  background: url(http://res.cloudinary.com/dkuqs8yz1/image/upload/v1495231777/trash-green.png);
  background-size: 24px 24px;
}

.detail-button#info {
  background: url(http://res.cloudinary.com/dkuqs8yz1/image/upload/v1495221055/info.png);
  background-size: 24px 24px;
}

.detail-button#info:hover {
  background: url(http://res.cloudinary.com/dkuqs8yz1/image/upload/v1495231777/info-green.png);
  background-size: 24px 24px;
}

.detail-form {
  display: flex;
  flex-direction: column;
  height: 100%;
  padding: 0 45px;
}

input#title {
  color: $note-title;
  font-size: 30px;
  height: 50px;
  padding: 5px;
  border-style: none;
}

input#title:focus {
  outline: none;
}

textarea#body {
  font-size: 15px;
  padding: 10px;
  height: 100%;
  border-style: none;
}

textarea#body:focus {
  outline: none;
}

